@@ -21,6 +21,7 @@ import cz.cvut.kbss.jopa.model.EntityManager;
 import cz.cvut.kbss.jopa.model.JOPAPersistenceProperties;
 import cz.cvut.kbss.jopa.model.descriptors.Descriptor;
 import cz.cvut.kbss.jopa.model.descriptors.EntityDescriptor;
+import cz.cvut.kbss.jopa.model.query.TypedQuery;
 import cz.cvut.kbss.termit.dto.assignment.TermOccurrences;
 import cz.cvut.kbss.termit.environment.Environment;
 import cz.cvut.kbss.termit.environment.Generator;
@@ -31,6 +32,7 @@ import cz.cvut.kbss.termit.model.assignment.*;
 import cz.cvut.kbss.termit.model.resource.Document;
 import cz.cvut.kbss.termit.model.resource.File;
 import cz.cvut.kbss.termit.model.selector.TextQuoteSelector;
+import cz.cvut.kbss.termit.persistence.dao.util.ScheduledContextRemover;
 import cz.cvut.kbss.termit.util.Vocabulary;
 import org.eclipse.rdf4j.model.ValueFactory;
 import org.eclipse.rdf4j.model.vocabulary.RDFS;
@@ -58,6 +60,9 @@ class TermOccurrenceDaoTest extends BaseDaoTestRunner {
 
     @Autowired
     private EntityManager em;
+
+    @Autowired
+    private ScheduledContextRemover contextRemover;
 
     @Autowired
     private TermOccurrenceDao sut;
@@ -159,7 +164,7 @@ class TermOccurrenceDaoTest extends BaseDaoTestRunner {
         final Map<Term, List<TermOccurrence>> allOccurrences = generateOccurrences(false, fOne, fTwo);
         final List<TermOccurrence> matching = allOccurrences.values().stream().flatMap(
                                                                     l -> l.stream().filter(to -> to.getTarget().getSource().equals(fOne.getUri())))
-                                                            .collect(Collectors.toList());
+                                                            .toList();
 
         em.getEntityManagerFactory().getCache().evictAll();
         final List<TermOccurrence> result = sut.findAllTargeting(fOne);
@@ -251,7 +256,10 @@ class TermOccurrenceDaoTest extends BaseDaoTestRunner {
                     to.removeType(Vocabulary.s_c_navrzeny_vyskyt_termu);
                     em.merge(to);
                 })));
-        transactional(() -> sut.removeAll(file));
+        transactional(() -> {
+            sut.removeAll(file);
+            contextRemover.runContextRemoval();
+        });
         assertTrue(sut.findAllTargeting(file).isEmpty());
         assertFalse(em.createNativeQuery("ASK { ?x a ?termOccurrence . }", Boolean.class).setParameter("termOccurrence",
                                                                                                        URI.create(
@@ -270,7 +278,10 @@ class TermOccurrenceDaoTest extends BaseDaoTestRunner {
                     to.removeType(Vocabulary.s_c_navrzeny_vyskyt_termu);
                     em.merge(to);
                 })));
-        transactional(() -> sut.removeAll(file));
+        transactional(() -> {
+            sut.removeAll(file);
+            contextRemover.runContextRemoval();
+        });
 
         assertFalse(em.createNativeQuery("ASK { ?x a ?target . }", Boolean.class).setParameter("target",
                                                                                                URI.create(
@@ -496,5 +507,31 @@ class TermOccurrenceDaoTest extends BaseDaoTestRunner {
                 assertEquals(defOccurrences.size(), a.getCount().intValue());
             }
         }
+    }
+
+    @Test
+    void updateSavesTermOccurrenceInContext() {
+        final File file = Generator.generateFileWithId(FILE_LABEL);
+        transactional(() -> em.persist(file));
+        final TermOccurrence occurrence = new TermFileOccurrence(Generator.generateUri(),
+                                                                 new FileOccurrenceTarget(file));
+        occurrence.getTarget().setSelectors(Collections.singleton(new TextQuoteSelector("test")));
+
+        transactional(() -> sut.persist(occurrence));
+        assertTrue(em.createNativeQuery("ASK WHERE { GRAPH ?g { ?x a ?occurrence ; ?hasTerm ?term .} }", Boolean.class)
+                     .setParameter("g", TermOccurrence.resolveContext(file.getUri()))
+                     .setParameter("x", occurrence.getUri())
+                     .setParameter("occurrence", URI.create(Vocabulary.s_c_souborovy_vyskyt_termu))
+                     .setParameter("hasTerm", URI.create(Vocabulary.s_p_je_prirazenim_termu))
+                     .getSingleResult());
+        final URI newTermUri = Generator.generateUri();
+        occurrence.setTerm(newTermUri);
+        transactional(() -> sut.update(occurrence));
+        assertTrue(em.createNativeQuery("ASK WHERE { GRAPH ?g { ?x a ?occurrence ; ?hasTerm ?term .} }", Boolean.class)
+                     .setParameter("g", TermOccurrence.resolveContext(file.getUri()))
+                     .setParameter("x", occurrence.getUri())
+                     .setParameter("occurrence", URI.create(Vocabulary.s_c_souborovy_vyskyt_termu))
+                     .setParameter("hasTerm", URI.create(Vocabulary.s_p_je_prirazenim_termu))
+                     .getSingleResult());
     }
 }
